RESOLVED FIXED223546
Unreviewed, fix Mac and non-unified JSCOnly builds
https://bugs.webkit.org/show_bug.cgi?id=223546
Summary Unreviewed, fix Mac and non-unified JSCOnly builds
Ross Kirsling
Reported 2021-03-19 17:36:32 PDT
Created attachment 423793 [details] Patch The tree is closed AND webkit-patch is busted so I guess I'll just upload a patch here for the weekend.
Attachments
Patch (2.50 KB, patch)
2021-03-19 17:36 PDT, Ross Kirsling
no flags
Patch (4.27 KB, patch)
2021-03-22 10:42 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2021-03-22 10:42:37 PDT
EWS
Comment 2 2021-03-22 13:30:16 PDT
Committed r274788: <https://commits.webkit.org/r274788> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423909 [details].
Radar WebKit Bug Importer
Comment 3 2021-03-22 13:31:25 PDT
Note You need to log in before you can comment on or make changes to this bug.