Unreviewed, fix Mac and non-unified JSCOnly builds https://bugs.webkit.org/show_bug.cgi?id=223546

Source/JavaScriptCore:

* wasm/WasmGlobal.h:
* wasm/WasmTable.h:
* wasm/js/JSWebAssemblyCompileError.cpp:
* wasm/js/JSWebAssemblyLinkError.cpp:
* wasm/js/JSWebAssemblyRuntimeError.cpp:
Add missing includes for non-unified JSC build.

Source/WTF:

* wtf/PlatformJSCOnly.cmake:
Add missing file for JSCOnly build on Mac.


Canonical link: https://commits.webkit.org/235592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274788 268f45cc-cd09-0410-ab3c-d52691b4dbfc